refactor: improve user name handling in `ChatService` and update build dependencies for Java 21 migration
Signed-off-by: chxei <chxei5667@gmail.com>